--- a/themes/terminal/layouts/partials/footer.html
+++ b/themes/terminal/layouts/partials/footer.html
@@ -1,13 +1,17 @@
 <footer class="footer">
   <div class="footer__inner">
+      <span>
+        <a href="https://nadon.io">Main Site</a> 
+        :: <a href="https://github.com/pnadon?tab=repositories">Github</a>
+        :: <a href="https://twitter.com/PhilNadon">Twitter</a>
+      </span>
     {{ if $.Site.Copyright }}
       <div class="copyright copyright--user">
         <span>{{ $.Site.Copyright | safeHTML }}</span>
     {{else}}
       <div class="copyright">
-        <span>© {{ now.Year }} Powered by <a href="http://gohugo.io">Hugo</a></span>
+        <span>© {{ now.Year }} Powered by <a href="http://gohugo.io">Hugo</a>, Theme made by <a href="https://twitter.com/panr">panr</a></span>
     {{end}}
-        <span>:: Theme made by <a href="https://twitter.com/panr">panr</a></span>
       </div>
   </div>
 </footer>
